syntax = "proto3";

option go_package = "github.com/wollac/autopeering/peer/proto";

package proto;

import "salt/proto/salt.proto";
import "peer/proto/service.proto";

// Peer defines the structure of a peer message
message Peer {
  bytes public_key = 1;
  service_map services = 2;
  proto.Salt salt = 3;
}

